Added WEbsite color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --black: #eeeeee;
-  --black_transparancy: #eeeeeebb;
+  --black: #bebebe;
+  --black_transparancy: #c2c0c04f;
   --grey: #0f0e0ee1;
   --white: #ffffff;
 }
